src/objects/Patient__c.object
<CustomObject>
    <description>Used to capture XO Patients</description>
    <fields>
        <fullName>Clinic__c</fullName>
        <label>Clinic</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AMAT Gloucester</fullName>
                </value>
                <value>
                    <fullName>AMAT Santa Clara</fullName>
                </value>
                <value>
                    <fullName>Apple Austin</fullName>
                </value>
                <value>
                    <fullName>Apple Cupertino</fullName>
                </value>
                <value>
                    <fullName>Facebook Menlo Park</fullName>
                </value>
                <value>
                    <fullName>Square</fullName>
                </value>
                <value>
                    <fullName>Near-site Mountain View</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Insurance__c</fullName>
        <label>Insurance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lumeris_ID__c</fullName>
        <externalId>true</externalId>
        <label>Lumeris ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_DOB__c</fullName>
        <label>Patient DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Patient_Email__c</fullName>
        <label>Patient Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Patient_First_Name__c</fullName>
        <label>Patient First Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Last_Name__c</fullName>
        <label>Patient Last Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Name__c</fullName>
        <formula>Patient_First_Name__c &amp; &quot; &quot; &amp;  Patient_Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Note__c</fullName>
        <label>Patient Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Patient_Phone__c</fullName>
        <label>Patient Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SF_XO_Tracking_ID__c</fullName>
        <inlineHelpText>Used only for the initial data migration</inlineHelpText>
        <label>SF XO Tracking ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Patient</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Patient Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patients</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>